# xcb-imdkit

./: .formatignore  .gitignore  CMakeLists.txt  README.md  XCBImdkitConfig.cmake.in  action.yml
.github/workflows/: check.yml
cmake/: FindUTHash.cmake  uninstall.cmake
src/: CMakeLists.txt  clientprotocolhandler.c  clientprotocolhandler.h  common.c  common.h  encoding.c  encoding.h  gen-proto.py  imclient.c  imclient.h  imclient_p.h  imdkit.c  imdkit.h  imdkit_p.h  list.h  message.c  message.h  parser.c  parser.h  protocolhandler.c  protocolhandler.h  uthash.h  xcb-imdkit.pc.in  ximcommon.h  ximproto-gen.h  ximproto.c  ximproto.h  ximproto_p.h
src/xlibi18n/: .directory  XlcPubI.h  XlcPublic.h  lcCT.c  lcCharSet.c  lcUTF8.c
src/xlibi18n/lcUniConv/: 8bit_tab_to_h.c  armscii_8.h  ascii.h  big5.h  big5_emacs.h  big5hkscs.h  cp1133.h  cp1251.h  cp1255.h  cp1256.h  gb2312.h  gbk.h  georgian_academy.h  georgian_ps.h  iso8859_1.h  iso8859_10.h  iso8859_11.h  iso8859_13.h  iso8859_14.h  iso8859_15.h  iso8859_16.h  iso8859_2.h  iso8859_3.h  iso8859_4.h  iso8859_5.h  iso8859_6.h  iso8859_7.h  iso8859_8.h  iso8859_9.h  iso8859_9e.h  jisx0201.h  jisx0208.h  jisx0212.h  koi8_c.h  koi8_r.h  koi8_u.h  ksc5601.h  mulelao.h  tatar_cyr.h  tcvn.h  (+4 more)
test/: CMakeLists.txt  client_demo.c  test_client.c  test_encoding.c  test_server.c
uthash/: uthash.h
